# osrs-tracker

./: Cargo.toml  README.md
src/: core.rs  main.rs
src/api/: mod.rs  player_lookup.rs
src/model/: goal.rs  mod.rs
src/models/: goal.rs  mod.rs  player.rs
src/ui/: icons.rs  mod.rs  screen.rs  style.rs
src/ui/components/: goal_card.rs  mod.rs  new_goal.rs  summary.rs
