[package]
name = "osrs-tracker"
version = "0.1.0"
edition = "2024"

# [lints]
# workspace = true

[dependencies]
eframe = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "1.0"
reqwest = { version = "0.12.19", features = ["json"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
egui_extras = { version = "0.27", features = ["default", "image", "file"] }
image = {version = "0.25", default-features = false, features = ["jpeg", "png"]}
include_assets = { version = "1.0.0", features = ["default"] }
winit = "0.29"
